--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.0.6",
     "next": "14.0.3",
     "preline": "^2.0.2",
     "react": "^18",
