--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
-    "framer-motion": "^11.0.6",
+    "framer-motion": "^11.0.8",
     "next": "14.0.3",
+    "next-sitemap": "^4.2.3",
     "preline": "^2.0.2",
     "react": "^18",
     "react-dom": "^18"
