--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# seo regenerates them on deployed websites (eg: vercel, etc...)
+public/robots.txt
+public/sitemap.xml
+public/sitemap-0.xml
