--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,6 @@ yarn-error.log*
 next-env.d.ts
 
 # seo regenerates them on deployed websites (eg: vercel, etc...)
-public/robots.txt
-public/sitemap.xml
-public/sitemap-0.xml
+#public/robots.txt
+#public/sitemap.xml
+#public/sitemap-0.xml
