--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "framer-motion": "^11.0.8",
     "next": "14.0.3",
+    "next-seo": "^6.5.0",
     "next-sitemap": "^4.2.3",
     "preline": "^2.0.2",
     "react": "^18",
